src/test/ui/attrs-with-no-formal-in-generics/attrs-with-no-formal-in-generics-1.stderr
error: trailing attribute after lifetime parameters
  --> $DIR/attrs-with-no-formal-in-generics-1.rs:9:25
   |
LL | impl<#[rustc_1] 'a, 'b, #[oops]> RefIntPair<'a, 'b> {
   |                         ^^^^^^^

error: aborting due to previous error

